Fix padding and margin on smaller device

--- a/docs/components/HomePage/HomePage.css
+++ b/docs/components/HomePage/HomePage.css
@@ -194,6 +194,8 @@
 
     .welcome-slide {
         grid-template-columns: 1fr;
+        margin: auto;
+        padding: auto;
     }
 
     .welcome-text-box {
